2014-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickGetImageGeometry): New function to get
	the image geometry string.  This function and the three others in
	this change set are contributed by Sara Shafaei.
	(MagickGetImageMatte): New function to read the image matte
	(opacity) channel enable flag.
	(MagickSetImageGeometry): New function to set the image geometry
	string.
	(MagickSetImageMatte): New function to set the image matte
	(opacity) channel enable flag.

2014-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickDrawImage): Remove development debug
	fprintf which causes each drawing primitive to be printed to
	stderr.

2014-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Fix scaling of alpha in sub-ranged
	pixels.  Addresses SourceForge issue #237 "Incorrect MAXVAL
	scaling when reading PAM images", which was not fully fixed in by
	the previous attempt.

2014-01-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tsd.c: Implement TSD for "pure" OpenMP mode without
	relying on POSIX or WIN32 TSD APIs.

	* magick/semaphore.c: Implement OpenMP-based locking so that code
	can compile in a "pure" OpenMP mode without relying on POSIX or
	WIN32 locking APIs.

	* configure.ac: --without-threads no longer disables use of
	OpenMP.  Use the already existing option --disable-openmp to
	disable OpenMP.

2014-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h: Support use of clang/llvm __attribute__ and
	__builtin extensions similar to the existing support for GCC.

2014-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (thumbnail): New method for fast image
	resizing, particularly to make thumbnails.

	* coders/gif.c: Log when Netscape loop exension is read and
	written.

	* coders/png.c (WriteOnePNGImage): In optimize mode, disable matte