@@ -853,6 +853,11 @@ static unsigned int WritePDFImage(const ImageInfo *image_info,Image *image)
                                &geometry.width,&geometry.height);
       (void) GetGeometry(page_geometry,&media_info.x,&media_info.y,
                          &media_info.width,&media_info.height);
+      (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                            "Image Resolution: %gx%g %s",
+                            image->x_resolution,
+                            image->y_resolution,
+                            ResolutionTypeToString(image->units));
       /*
         Scale relative to dots-per-inch.
       */
@@ -863,12 +868,36 @@ static unsigned int WritePDFImage(const ImageInfo *image_info,Image *image)
       count=GetMagickDimension(density,&x_resolution,&y_resolution,NULL,NULL);
       if (count != 2)
         y_resolution=x_resolution;
+      /*
+        Use image resolution information if it appears to be valid.
+        If resolution units are not specified, then we assume DPI.
+      */
+      if ((image->x_resolution > 0.0) && (image->y_resolution > 0.0))
+        {
+          x_resolution = image->x_resolution;
+          y_resolution = image->y_resolution;
+          if (image->units == PixelsPerCentimeterResolution)
+            {
+              x_resolution *= 2.54;
+              y_resolution *= 2.54;
+            }
+        }
       if (image_info->density != (char *) NULL)
         {
-          count=GetMagickDimension(image_info->density,&x_resolution,&y_resolution,NULL,NULL);
+          count=GetMagickDimension(image_info->density,&x_resolution,
+                                   &y_resolution,NULL,NULL);
           if (count != 2)
             y_resolution=x_resolution;
+          if (image_info->units == PixelsPerCentimeterResolution)
+            {
+              x_resolution *= 2.54;
+              y_resolution *= 2.54;
+            }
         }
+      (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                            "PDF Resolution: %gx%g DPI",
+                            x_resolution,y_resolution);
+
       x_scale=(geometry.width*dx_resolution)/x_resolution;
       geometry.width=(unsigned long) (x_scale+0.5);
       y_scale=(geometry.height*dy_resolution)/y_resolution;
