@@ -35,6 +35,18 @@
 <div class="document">
 
 
+<p>2014-02-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pdf.c (WritePDFImage): Use resolution from image if it
+appears to be valid.  Resolves SourceForge issue #261 &quot;PNG Pixel
+Density Not Preserved Converting to PDF&quot;.</li>
+<li>magick/enum_strings.c (StringToResolutionType): New function to
+convert ResolutionType to C string.
+(ResolutionTypeToString): New function to convert from C string to
+ResolutionType.</li>
+</ul>
+</blockquote>
 <p>2014-02-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
